fix appIcon styling on mobile display

--- a/src/routes/Home/components/Home.scss
+++ b/src/routes/Home/components/Home.scss
@@ -45,11 +45,16 @@
 }
 
 .appIcon {
-  display: flex !important;
   width: 50px !important;
   height: 50px !important;
+  /* text-align: center; */
   color: #337ab7 !important;
-  margin: 2em auto 1em auto !important;
+}
+
+.appIconDiv {
+  display: flex !important;
+  justify-content: center !important;
+  margin: 2em auto 0.5em auto !important;
 }
 
 .makePollButton {
